package com.telus.dsu.introgit;

import com.telus.dsu.introgit.calculator.presenter.OperationPresenter;

/**
 * Hello world!
 *
 */
public class App 
{
    public static void main( String[] args )
    {
        new OperationPresenter().doMenu();

    }
}
