package com.telus.dsu.introgit.calculator.model;

public class OperationHistory {
    
}
