package com.telus.dsu.introgit.calculator.presenter;

public class OperationPresenter {

    public void doMenu() {
    }

}
