package com.telus.dsu.introgit.util;

public class Console {
    
    public static void printTitle(String title){
        System.out.println("***********************************");
        System.out.println(title.toUpperCase());
        System.out.println("***********************************\n");
    }
}